add result tree validation and experiment results in results.md